# zjctl

./: .gitignore  Cargo.toml
crates/zjctl/: Cargo.toml
crates/zjctl-proto/src/: lib.rs  protocol.rs  selector.rs
crates/zjctl/src/: client.rs  main.rs  output.rs
crates/zjctl/src/commands/: batch.rs  doctor.rs  mcp.rs  mod.rs  pane.rs  panes.rs  sessions.rs  status.rs  tab.rs
crates/zrpc/src/: main.rs  state.rs
gov/: config.toml
gov/adr/: ADR-0001-json-rpc-over-zellij-pipes-as-transport-mechanism.toml  ADR-0002-wasm-plugin-for-server-side-pane-operations.toml  ADR-0003-three-crate-workspace-with-shared-protocol.toml  ADR-0004-custom-pane-selector-dsl-for-addressing-panes.toml  ADR-0005-client-side-capture-via-focus-and-dump-screen.toml  ADR-0006-polling-based-idle-detection-via-screen-hashing.toml  ADR-0007-launch-detection-by-terminal-id-delta-polling.toml  ADR-0008-mcp-server-for-remote-agent-access-via-rmcp-and-stdio-transport.toml
gov/rfc/RFC-0001/: rfc.json
gov/rfc/RFC-0001/clauses/: C-ERRORS.json  C-PANE-FOCUS.json  C-PANE-RENAME.json  C-PANE-RESIZE.json  C-PANE-SEND.json  C-PANES-LIST.json  C-REQUEST.json  C-RESPONSE.json  C-SELECTORS.json  C-SUMMARY.json  C-TRANSPORT.json
gov/work/: 2026-03-10-add-session-flag-and-session-management-commands.toml  2026-03-10-batch-rpc-api-for-multi-pane-operations.toml  2026-03-10-non-focus-dependent-pane-capture.toml  2026-03-10-pane-metadata-and-tagging.toml  2026-03-10-pane-scrollback-search.toml  2026-03-10-process-and-exit-detection-for-pane-commands.toml  2026-03-10-tab-management-commands.toml  2026-03-10-uniform-json-output-and-structured-error-codes-on-all-commands.toml  2026-03-11-mcp-server-for-remote-agent-access.toml
