# Per [[ADR-0003]], three-crate workspace: CLI, shared protocol, WASM plugin
[workspace]
resolver = "2"
members = [
    "crates/zjctl",
    "crates/zjctl-proto",
    "crates/zrpc",
]
default-members = [
    "crates/zjctl",
    "crates/zjctl-proto",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["zjctl contributors"]
repository = "https://github.com/mrshu/zjctl"

[workspace.dependencies]
# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
regex = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Plugin — pinned to main for get_pane_scrollback (PR #4465, merged Oct 2025, not yet released)
zellij-tile = { git = "https://github.com/zellij-org/zellij", branch = "main" }

# Internal
zjctl-proto = { path = "crates/zjctl-proto", version = "0.1.3" }
