[package]
name = "zjctl"
description = "Programmatic Zellij automation for humans, scripts, and agents alike"
readme = "README.md"
keywords = ["zellij", "terminal", "cli", "pane", "rpc"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zjctl"
path = "src/main.rs"

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars"]

[dependencies]
zjctl-proto.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true

# MCP (per [[ADR-0008]], optional)
rmcp = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
